--- a/Практика 6/Задание 1/CMakeLists.txt
+++ b/Практика 6/Задание 1/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.24)
-project(Практика 6)
+project(Practice 6)
 
 set(CMAKE_CXX_STANDARD 14)
 
-include_directories(Практика 6)
+include_directories(Practice 6)
 
-add_executable(Задание 1 Cone.cpp Cone.h main.cpp)
+add_executable(Task 1 Cone.cpp Cone.h main.cpp)
